k8s/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: server
          image: nvi/grpc-proxy
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-srv
spec:
  selector:
    app: proxy
  ports:
    - name: proxy
      protocol: TCP
      port: 8090
      targetPort: 8090
