k8s/ingress-grpc-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: fortune-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: might-grpc.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-srv
                port:
                  number: 50051
