k8s/ingress-http-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: might-grpc.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-srv
                port:
                  number: 8090
